--- a/templates/people/index.html.twig
+++ b/templates/people/index.html.twig
@@ -4,4 +4,15 @@
 
 {% block body %}
     <div id="root">Loading...</div>
+    <div>
+        Versija <b id="version">...</b>
+    </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        var needVersion = true;
+        var needReact = true;
+    </script>
+    {{ parent() }}
 {% endblock %}
