--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,20 @@
         {% block canonical_meta %}{% endblock %}
     </head>
     <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Symfony-hw #2</a>
+
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('students') }}">Pagrindinis</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('people') }}">Žmonės</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
         {% block body %}{% endblock %}
         {% block javascripts %}
             <script src="{{ asset('build/js/app.js') }}"></script>
