update index and peopleController

--- a/templates/people/index.html.twig
+++ b/templates/people/index.html.twig
@@ -8,8 +8,14 @@
         Versija <b id="version">...</b>
     </div>
 
-    <input type="text" id="name"/>
-    <span id="validation-result" data-path="{{ path('validatePerson', {'element': 'name'}) }}"></span>
+    Vardas: <input type="text" id="name"/>
+    <span id="validation-result" data-path="{{ path('validatePerson', {'element': 'name'}) }}"></span><br>
+    Komanda: <input type="text" id="team"/>
+    <span id="teamValidation-result" data-path="{{ path('validateTeam', {'element': 'name'}) }}"></span>
+    <hr>
+    {% for team, student in students %}
+        <b>{{ team }}:</b> {{ student.members|join(', ') }}<br>
+    {% endfor %}
 {% endblock %}
 
 {% block javascripts %}
