--- a/templates/people/index.html.twig
+++ b/templates/people/index.html.twig
@@ -11,10 +11,10 @@
     Vardas: <input type="text" id="name"/>
     <span id="validation-result" data-path="{{ path('validatePerson', {'element': 'name'}) }}"></span><br>
     Komanda: <input type="text" id="team"/>
-    <span id="teamValidation-result" data-path="{{ path('validateTeam', {'element': 'name'}) }}"></span>
+    <span id="teamValidation-result" data-path="{{ path('validateTeam', {'element': 'team'}) }}"></span>
     <hr>
     {% for team, student in students %}
-        <b>{{ team }}:</b> {{ student.members|join(', ') }}<br>
+        <b>{{ team }}:</b> {{ student.members|join(', ') }};<br>
     {% endfor %}
 {% endblock %}
 
@@ -24,5 +24,7 @@
         var needReact = true;
     </script>
     <script src="{{ asset('build/js/validation.js') }}"></script>
+    <script src="{{ asset('build/js/validationTeam.js') }}"></script>
+
     {{ parent() }}
 {% endblock %}
