--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,20 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
+{% block title %}Admin Panel{{ controller_name }}!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="m4 jumbotron">
+        <div class="lead">
+            Hello, {{ app.user.username }}
+            {% if 'ROLE_ADMIN' in app.user.roles %}
+                <button class="btn btn-primary">Edit</button>
+            {% endif %}
+        </div>
+        {% if app.user.website %}
+            <div class="p2">
+                <a href="{{ app.user.website }}">{{ app.user.website }}</a>
+                <span class="badge badge-secondary">WebSite</span>
+            </div>
+        {% endif %}
+        {% if app.user.linkedinlink %}
+            <div class="p2">
+                <a href="{{ app.user.linkedinlink }}">{{ app.user.linkedinlink }}</a>
+                <span class="badge badge-secondary">LinkedIn</span>
+            </div>
+        {% endif %}
+    </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>src/Controller/AdminController.php</code></li>
-        <li>Your template at <code>templates/admin/index.html.twig</code></li>
-    </ul>
-</div>
+    <div class="jumbotron">
+        <a class="btn btn-info btn-lg" href="{{ path('students') }}">My home</a>
+    </div>
 {% endblock %}
